some minor changes

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -24,7 +24,7 @@
                             </div>
                         </div>
                         <div style="float: right;" class="form-group row">
-                            <button type="submit" class="btn btn-success">ОСТАВИТЬ ЗАЯВКУ</button>
+                            <button type="submit" class="btn btn-success my-4">ОСТАВИТЬ ЗАЯВКУ</button>
                         </div>
                     </form>
                 </div>
