--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -26,7 +26,7 @@
             <div class="contact-top">
                 <a class="whatsapp-number" href="https://web.whatsapp.com/"></a>
                 <a class="telegram-number" href="https://t.me/"></a>
-                <a class="phone-number text-dark" href="tel:+74957777777">
+                <a class="phone-number text-dark text-muted text-decoration-none" href="tel:+74957777777">
                 <h6>+7(495)-777-77-77</h6></a>
             </div>
         </nav>
@@ -47,7 +47,7 @@
                     <div class="contact-top">
                         <a class="whatsapp-number" href="https://web.whatsapp.com/"></a>
                         <a class="telegram-number" href="https://t.me/"></a>
-                        <a class="phone-number text-dark" href="tel:+74957777777">
+                        <a class="phone-number text-dark text-muted text-decoration-none" href="tel:+74957777777">
                         <h6>+7(495)-777-77-77</h6></a>
                     </div>
                 </nav>
